Reduce project title font size to prevent long words wrapping to two lines

--- a/src/App.css
+++ b/src/App.css
@@ -693,7 +693,7 @@ colors: #00345d, #12293a */
 }
 
 .project-caption h3 {
-  font-size: 3.2vmin;
+  font-size: 2.8vmin;
   padding-top: 1vh;
 }
 
